--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": ">=7.1.3",
         "maxbanton/cwh": "^1.1",
-        "illuminate/support": "^5.6 || ^6.0"
+        "illuminate/support": "*"
     },
     "autoload": {
         "psr-4": {
