--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "type": "library",
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2||^8.0",
         "maxbanton/cwh": "^1.1",
         "illuminate/support": "*"
     },
